# agent-redteam

./: .gitignore  README.md  models.py  pyproject.toml
agent_redteam/: attack_generator.py  attack_runner.py  cli.py  models.py  prompt_file_scanner.py  repo_scanner.py  report_generator.py  response_analyzer.py  risk_scoring.py  secret_scanner.py  utils.py
datasets/: attack_prompts.json
examples/: vulnerable_agent.py
skills/redteam/: SKILL.md  main.py
