[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-redteam"
version = "0.2.0"
description = "AI that tries to hack your AI agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "requests>=2.32.3",
  "rich>=13.7.1",
  "gitpython>=3.1.43"
]

[project.scripts]
agent-redteam = "agent_redteam.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent_redteam*"]
